--- a/basic_ts/package.json
+++ b/basic_ts/package.json
@@ -12,7 +12,6 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@stylistic/eslint-plugin": "^4.2.0",
@@ -26,5 +25,6 @@
   },
   "dependencies": {
     "express": "^4.21.2"
-  }
+  },
+  "description": ""
 }
