--- a/patientor_backend/package.json
+++ b/patientor_backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@stylistic/eslint-plugin": "^4.2.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "eslint": "^9.24.0",
     "ts-node-dev": "^2.0.0",
@@ -21,6 +22,7 @@
     "typescript-eslint": "^8.29.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
